--- a/converter/steel-bars-calculator/index.html
+++ b/converter/steel-bars-calculator/index.html
@@ -3,74 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weight Calculator</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Rod & GI Sheet Calculator</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Weight Calculator</h1>
-        <div class="button-group">
-            <button onclick="showSection('plainRod')">Plain Rod</button>
-            <button onclick="showSection('ringRod')">Ring Rod</button>
-            <button onclick="showSection('squareRod')">Square Rod</button>
-            <button onclick="showSection('giSheet')">GI Sheet</button>
-        </div>
 
-        <!-- Plain Rod Section -->
-        <div id="plainRod" class="calc-section">
-            <h2>Plain Rod</h2>
-            <select id="plainSelect" onchange="toggleInputs('plain')">
-                <option value="diameterLength">Diameter & Length</option>
-                <option value="weightLength">Weight & Length</option>
-                <option value="diameterWeight">Diameter & Weight</option>
-            </select>
-            <label>Diameter (mm): <input type="number" id="plainDiameter"></label>
-            <label>Length (m): <input type="number" id="plainLength"></label>
-            <label>Weight (kg): <input type="number" id="plainWeight"></label>
-            <button onclick="calculatePlainRod()">Calculate</button>
-            <div id="plainResult"></div>
-        </div>
+    <div class="button-container">
+        <button onclick="showSection('plainRod')">Plain Rod</button>
+        <button onclick="showSection('ringRod')">Ring Rod</button>
+        <button onclick="showSection('squareRod')">Square Rod</button>
+        <button onclick="showSection('giSheet')">GI Sheet</button>
+    </div>
 
-        <!-- Ring Rod Section -->
-        <div id="ringRod" class="calc-section">
-            <h2>Ring Rod</h2>
-            <label>Bend Factor (1.04-1.12): <input type="number" id="bendFactor" value="1.06"></label>
-            <select id="ringSelect" onchange="toggleInputs('ring')">
-                <option value="diameterLength">Diameter & Length</option>
-                <option value="weightLength">Weight & Length</option>
-                <option value="diameterWeight">Diameter & Weight</option>
-            </select>
-            <label>Diameter (mm): <input type="number" id="ringDiameter"></label>
-            <label>Length (m): <input type="number" id="ringLength"></label>
-            <label>Weight (kg): <input type="number" id="ringWeight"></label>
-            <button onclick="calculateRingRod()">Calculate</button>
-            <div id="ringResult"></div>
-        </div>
+    <!-- Plain Rod Section -->
+    <div id="plainRod" class="calc-section">
+        <h2>Plain Rod Calculator</h2>
+        <input type="number" id="plainDiameter" placeholder="Diameter (mm)">
+        <input type="number" id="plainLength" placeholder="Length (m)">
+        <input type="number" id="plainWeight" placeholder="Weight (kg)">
+    </div>
 
-        <!-- Square Rod Section -->
-        <div id="squareRod" class="calc-section">
-            <h2>Square Rod</h2>
-            <select id="squareSelect" onchange="toggleInputs('square')">
-                <option value="diameterLength">Side & Length</option>
-                <option value="weightLength">Weight & Length</option>
-                <option value="diameterWeight">Side & Weight</option>
-            </select>
-            <label>Side (mm): <input type="number" id="squareSide"></label>
-            <label>Length (m): <input type="number" id="squareLength"></label>
-            <label>Weight (kg): <input type="number" id="squareWeight"></label>
-            <button onclick="calculateSquareRod()">Calculate</button>
-            <div id="squareResult"></div>
-        </div>
+    <!-- Ring Rod Section -->
+    <div id="ringRod" class="calc-section">
+        <h2>Ring Rod Calculator</h2>
+        <input type="number" id="ringDiameter" placeholder="Diameter (mm)">
+        <input type="number" id="ringLength" placeholder="Length (m)">
+        <input type="number" id="ringWeight" placeholder="Weight (kg)">
+        <input type="number" id="bendFactor" placeholder="Bend Factor (default 1.06)">
+    </div>
 
-        <!-- GI Sheet Section -->
-        <div id="giSheet" class="calc-section">
-            <h2>GI Sheet</h2>
-            <label>Thickness (mm): <input type="number" id="sheetThickness"></label>
-            <label>Width (m): <input type="number" id="sheetWidth"></label>
-            <label>Length (m): <input type="number" id="sheetLength"></label>
-            <button onclick="calculateGISheet()">Calculate</button>
-            <div id="giResult"></div>
-        </div>
+    <!-- Square Rod Section -->
+    <div id="squareRod" class="calc-section">
+        <h2>Square Rod Calculator</h2>
+        <input type="number" id="squareDiameter" placeholder="Side (mm)">
+        <input type="number" id="squareLength" placeholder="Length (m)">
+        <input type="number" id="squareWeight" placeholder="Weight (kg)">
+    </div>
+
+    <!-- GI Sheet Section -->
+    <div id="giSheet" class="calc-section">
+        <h2>GI Sheet Calculator</h2>
+        <input type="number" id="sheetThickness" placeholder="Thickness (mm)">
+        <input type="number" id="sheetWidth" placeholder="Width (m)">
+        <input type="number" id="sheetLength" placeholder="Length (m)">
+        <input type="number" id="sheetWeight" placeholder="Weight (kg)">
     </div>
 
     <script src="script.js"></script>
